# threshold-encryption

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run_test.sh  transcript-1024-  transcript-512
.github/workflows/: rust.yml
benches/: decryption.rs  encryption.rs  setup.rs
examples/: aggregatekey.rs  cmpagg.rs  create_helpers.rs  create_keys.rs  create_transcript.rs  encrypt_decrypt.rs  encrypt_test.rs  endtoend.rs  initkeys.rs  main.rs  mempool.rs  n_comp.rs  sendtx.rs  test.rs  weighted.rs
isvalidhelpers/: 128  16  2  32  4  64  8
lagrangehelpers/: 128  16  2  256  32  4  64  8
src/: decryption.rs  encryption.rs  kzg.rs  lib.rs  main.rs  setup.rs  utils.rs
src/api/: deserialize.rs  mod.rs  routes.rs  types.rs
src/api/deserialize/: decrypt.rs  decrypt_part.rs  encrypt.rs  is_valid.rs  mod.rs  pk.rs  verify_part.rs
src/api/routes/: decrypt.rs  decrypt_part.rs  encrypt.rs  get_pk.rs  is_valid.rs  mod.rs  verify_part.rs
tests/: main.go  message.proto  message_pb2.py  requirements.txt  test.py  test.sh
tests/api/: api.pb.go  api.proto
tests_go/: go.mod  main.go
tests_go/api/: api.pb.go  api.proto
