[package]
name = "silent-threshold"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.203"
toml = "0.8.14"
actix-web = "4"
criterion = { version = "0.5.0", features = [ "html_reports" ] }
ark-std = { version = "0.4.0" }
ark-ec = { version = "0.4.0" }
ark-ff = { version = "0.4.0" }
ark-poly = { version = "0.4.0" }
ark-bls12-381 = { version = "0.4.0" }
ark-serialize = { version = "0.4.0" }
aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"
sha2 = "0.10"
generic-array = "0.14"
rand = "0.8"
log = "0.4.21"
env_logger = "0.11.3"
lazy_static = "1.5.0"

[features]
asm = [ "ark-ff/asm" ]

[profile.dev]
opt-level = 3

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "decryption"
harness = false

[[bench]]
name = "interpolation"
harness = false

[[bench]]
name = "setup"
harness = false
